--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </h2>
         <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
           <div class="accordion-body fs-5">
-            Scammers claim to be from the Social Security Administration and request personal information, such as Social Security numbers or bank account numbers, to gain unauthorized access or commit identity theft. create fake online profiles on dating websites or social media platforms and pretend to be interested in a romantic relationship to gain your trust and eventually ask for money or personal information.          </div>
+            Scammers claim to be from the Social Security Administration and request personal information, such as Social Security numbers or bank account numbers, to gain unauthorized access or commit identity theft.</div>
         </div>
         </div>
       <div class="accordion-item">
@@ -145,7 +145,7 @@
         </h2>
         <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
           <div class="accordion-body fs-5">
-            Scammers pose as technical support representatives and contact you claiming that your computer has a problem or virus, and ask for remote access or payment to fix the issue, when in reality, they are trying to gain unauthorized access or steal your money.        </div>
+            Scammers pose as technical support representatives and contact you claiming that your computer has a problem or virus, and ask for remote access or payment to fix the issue, when in reality, they are trying to gain unauthorized access or steal your money.</div>
         </div>
       </div>
       <div class="accordion-item">
